--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-around;
     background-color: rgb(138, 138, 138);
-    width: 30%;
+    width: 33%;
     height: 100%;
     color: white;
 
